# controller/article/article.go
@@ -4,7 +4,7 @@ import (
 	"encoding/json"
 	"net/http"
 
-	articledto "github.com/hotkimho/realworld-api/controller/dto/article"
+	"github.com/hotkimho/realworld-api/controller/dto/article"
 	"github.com/hotkimho/realworld-api/repository"
 	"github.com/hotkimho/realworld-api/responder"
 	"github.com/hotkimho/realworld-api/util"
@@ -16,8 +16,8 @@ import (
 // @Accept json
 // @Produce json
 // @Param authorization header string true "jwt token"
-// @Param createArticleReq body CreateArticleRequestDTO true "createArticleReq"
-// @Success 201 {object} CreateArticleResponseWrapperDTO "success"
+// @Param createArticleReq body articledto.CreateArticleRequestDTO true "createArticleReq"
+// @Success 201 {object} articledto.CreateArticleResponseWrapperDTO "success"
 // @Failure 400 {object} types.ErrorResponse "bad request"
 // @Failure 422 {object} types.ErrorResponse "요청을 제대로 수행하지 못함"
 // @Failure 500 {object} types.ErrorResponse "network error"
@@ -92,6 +92,43 @@ func ReadArticleByID(w http.ResponseWriter, r *http.Request) {
 	}
 
 	responder.ReadArticleByIDResponse(w, *article)
+}
+
+// @Summary Read article by offset
+// @Description page, limit을 이용해서 article을 읽어옴(limit는 없는 경우 10으로 사용)
+// @Tags Article tag
+// @Accept json
+// @Produce json
+// @Param authorization header string true "jwt token"
+// @Param user_id path int true "user id"
+// @Param page header int false "page"
+// @Param limit header int false "limit"
+// @Success 200 {object} articledto.ReadArticleByOffsetResponseWrapperDTO "success"
+// @Failure 400 {object} types.ErrorResponse "bad request"
+// @Failure 422 {object} types.ErrorResponse "요청을 제대로 수행하지 못함"
+// @Failure 500 {object} types.ErrorResponse "network error"
+// @Router /user/{user_id}/articles [get]
+func ReadArticleByOffset(w http.ResponseWriter, r *http.Request) {
+
+	userID, err := util.GetIntegerParam[int64](r, "user_id")
+	if err != nil {
+		responder.ErrorResponse(w, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	page, limit, err := util.GetOffsetAndLimit(r)
+	if err != nil {
+		responder.ErrorResponse(w, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	articles, err := repository.ArticleRepo.GetByOffset(repository.DB, userID, page, limit)
+	if err != nil {
+		responder.ErrorResponse(w, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	responder.ReadArticleByOffsetResponse(w, articles)
 }
 
 // @Summary Update article
